.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_ProductIndex__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only Active Product Index records will be used. This allows for new records to be created, while leaving the old ones in place until the index batch job is complete.</description>
        <inlineHelpText>Only Active Product Index records will be used. This allows for new records to be created, while leaving the old ones in place until the index batch job is complete.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__IndexCurrency__c</fullName>
        <description>The corresponding currency code, ONLY used to assist in batch creation of the index records. NOTE: When using a &quot;Master Price List&quot; this value will be set to GLOBAL, and be currency agnostic.</description>
        <inlineHelpText>The corresponding currency code, ONLY used to assist in batch creation of the index records. NOTE: When using a &quot;Master Price List&quot; this value will be set to GLOBAL, and be currency agnostic.</inlineHelpText>
        <label>Index Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__IndexPrice__c</fullName>
        <description>A single indexed Price for the associated product. Primarily used for sorting on the Product List Page.</description>
        <externalId>true</externalId>
        <inlineHelpText>A single indexed Price for the associated product. Primarily used for sorting on the Product List Page.</inlineHelpText>
        <label>Index Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__IndexType__c</fullName>
        <description>The type of index, possible values SEARCH, CATEGORY (Base 64 Encoded). Necessary for unique filtering on SOSL searches.</description>
        <inlineHelpText>The type of index, possible values SEARCH, CATEGORY (Base 64 Encoded)</inlineHelpText>
        <label>Index Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__LastIndex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is only used for tracking purposes during batch job creation.</description>
        <inlineHelpText>This field is only used for tracking purposes during batch job creation.</inlineHelpText>
        <label>Last Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PriceLists__c</fullName>
        <description>A complete list of CC Price List SFIDs separated by a single space, to which the product belongs.</description>
        <inlineHelpText>A complete list of CC Price List SFIDs separated by a single space, to which the product belongs.</inlineHelpText>
        <label>Price Lists</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ccrz__E_ProductCategory__c</referenceTo>
        <relationshipLabel>CC Product Indices</relationshipLabel>
        <relationshipName>ProductIndices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductName__c</fullName>
        <description>The localized Product Name. Used for sort order and performing SOSL search against a product.</description>
        <externalId>true</externalId>
        <inlineHelpText>The localized Product Name. Used for sort order and performing SOSL search against a product.</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product to which this Index applies.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Product Indices</relationshipLabel>
        <relationshipName>CCProductIndices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SKU__c</fullName>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDescription__c</fullName>
        <description>The localized Product Short Description. Used for performing SOSL search against a product.</description>
        <inlineHelpText>The localized Product Short Description. Used for performing SOSL search against a product.</inlineHelpText>
        <label>Short Description</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <label>CC Product Index</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__ProductName__c</columns>
        <columns>ccrz__IndexPrice__c</columns>
        <columns>ccrz__SKU__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{000000000}</displayFormat>
        <label>CC Product Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Indices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>